<resources>
    <string name="app_name">MyWingman</string>

    <string name="action_save_airman">Save Airman</string>
    <string name="error_title">Something\'s a little screwy . . .</string>
    <string name="error_message">We\'ll look into this!</string>
    <string name="error_button_text">OK</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="privacy_act_text">The information herein is For Official Use Only (FOUO) which must be protected under the Privacy Act of 1974, as amended. Unauthorized disclosure or misuse of this PERSONAL INFORMATION may result in criminal and/or civil penalties.</string>
    <string name="log_in">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="signup_error_title">oops!</string>
    <string name="login_error_message">Please enter a valid username/password</string>
    <string name="email_field">Enter an E-Mail address</string>
    <string name="password_hint">Password</string>
    <string name="username_login_hint">Enter a Username</string>
    <string name="signup_button_label">Sign up!</string>
    <string name="signup_error_message">User names must be at least 5 characters, Passwords must be at least 8 characters</string>

    <string name="action_logout">Log out</string>
    <string name="title_activity_sign_up">Sign Up!</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="Username_hint">Username</string>
    <string name="app_title">MyWingman</string>
    <string name="dev_title">A YukiDev Project</string>
    <string name="title_activity_get_airmen">GetAirmenActivity</string>
    <string name="airman_fragment_title">Airmen</string>
    <string name="action_about">About</string>
    <string name="toast_about">All about toast</string>
    <string name="encryption_password">UserName</string>
    <string name="decryption_password">UserName</string>
    <string name="title_activity_add_airman">AddAirmanActivity</string>
    <string name="add_airman_cancel">Cancel</string>
    <string name="add_airman_save">Save this Airman</string>
    <string name="last_four_edit">Last Four SSN</string>
    <string name="des_text_view">Date Entered Service</string>
    <string name="des_button">DES</string>
    <string name="action_return">action_go_back</string>

    <string-array name="rank_spinner_items">
        <item>AB</item>
        <item>Amn</item>
        <item>A1C</item>
        <item>SrA</item>
        <item>SSgt</item>
        <item>TSgt</item>
        <item>MSgt</item>
        <item>SMSgt</item>
        <item>CMSgt</item>
    </string-array>

    <string-array name="backup_restore">
        <item>Backup Database</item>
        <item>Restore Database</item>
    </string-array>
    <string name="title_activity_edit_airman">EditAirmanActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="last_name_text">Last Name</string>
    <string name="first_name_text">First Name</string>
    <string name="edit_airman_text">Edit Airman</string>
    <string name="edit_des">Edit DES</string>
    <string name="edit_dor">Edit DOR</string>
    <string name="age">Age</string>
    <string name="ssn_warning">Adding more than 4 digits of the SSN is NOT advised.</string>
    <string name="backup_restore_database_title">Backup/Restore</string>

</resources>
