<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="jameshigashiyama.com.mywingman.SignUpActivity"
                android:background="@drawable/bg_gradient">



    <TextView
        android:id="@+id/appTitle"
        style="@style/AppTitle"/>
    <TextView
        android:id="@+id/devTitle"
        style="@style/DevTitle"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/AuthLayout">


        <EditText
            android:id="@+id/usernameField"
            android:inputType="textPersonName"
            android:hint="@string/username_login_hint"
            style="@style/EditText"/>
        <requestFocus />

        <EditText
            android:id="@+id/passwordField"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_below="@+id/usernameField"
            style="@style/EditText"/>

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailField"
            android:layout_below="@+id/passwordField"
            android:hint="@string/email_field"
            style="@style/EditText"/>
    </LinearLayout>
    <Button
        android:text="@string/signup_button_label"
        android:id="@+id/signupButton"
        style="@style/ButtonStyle"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpProgressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>