<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_gradient"
                tools:context="jameshigashiyama.com.mywingman.activites.AddAirmanActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginBottom="8dp"
        style="@style/AuthLayout">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastNameEditText"
        style="@style/EditText"
        android:hint="Last Name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/AuthLayout"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/linearLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstNameEditText"
            style="@style/EditText"
            android:hint="First Name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        style="@style/AuthLayout"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout2">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/btn_dropdown"
                    android:id="@+id/ageSpinner"
                    android:layout_marginBottom="8dp">
                </Spinner>

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Age"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:id="@+id/ageTextView"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            style="@style/AuthLayout"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_below="@id/linearLayout3">

                <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/rank_spinner_items"
                android:background="@android:drawable/btn_dropdown"
                android:id="@+id/rankSpinner">
                </Spinner>

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rank"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:id="@+id/rankTextView"
                android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        style="@style/AuthLayout"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DORdateButton"
            android:text="DOR"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:text="Date of Rank"
            android:textSize="24sp"
            android:id="@+id/DORtextView"/>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        style="@style/AuthLayout"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout5">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DESdateButton"
            android:text="@string/des_button"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:text="@string/des_text_view"
            android:id="@+id/DEStextView"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        style="@style/AuthLayout"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout6">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastFourEditText"
            style="@style/EditText"
            android:inputType="number"
            android:hint="@string/last_four_edit"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        style="@style/AuthLayout"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:text="@string/add_airman_save"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton"
            android:text="@string/add_airman_cancel"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
